stop screen jumping on firefox when tabbing out of the input field [PT #178207687]
position relative on the dropdown of the following dropdowns caused it?!?

--- a/src/Training/css/filter.css
+++ b/src/Training/css/filter.css
@@ -169,14 +169,6 @@ button.chip {
     color: #51247a;
 }
 
-.listHolder label {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-
-    margin-bottom: 0;
-}
-
 .hovertext.above {
     font-size: 0.8rem;
     color: #51247a;
